      \PR{17617}.

      \item \code{format(object.size(.), digits=NULL)} now works, fixing
      \PR{17628} reported by Jonathan Carroll.

      \item \code{get_all_vars(f, d)} now also works for cases, e.g. where
      \code{d} contains a matrix.  Reported by Simon Wood in 2009 and patch
      provided by Ben Bolker in \PR{13624}.

      \item \code{barplot()} could get spacings wrong if there were exactly two
      bars \PR{15522}.  Patch by Michael Chirico.

      \item \code{power.t.test()} works in more cases when returning values
      of n smaller than 2.

      \item \code{dotchart(*, pch=., groups=.)} now works better.  Reported
      by Robert and confirmed by Nic Rochette in \PR{16953}.

      \item \code{canCoerce(obj, cl)} no longer assumes
      \code{length(class(obj)) == 1}.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.1}{

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The default detection of the shell variable \code{libNN} is
      overridden for derivatives of Debian Linux, some of which have
      started to have a \file{/usr/lib64} directory.
      (E.g.\sspace{}Ubuntu 19.04.)  As before, it can be specified in
      \file{config.site}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD config} knows the values of \code{AR} and
      \code{RANLIB}, often set for LTO builds.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The use of a character vector with \code{.Fortran()} is
      formally deprecated and gives a non-portability warning.  (It has
      long been strongly discouraged in \sQuote{Writing R Extensions}.)
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, GUI package installation via \code{menuInstallPkgs()}
      works again, thanks to Len Weil's and Duncan Murdoch's \PR{17556}.

      \item \command{R CMD check} on \code{data()} fixing \PR{17558}
      thanks to Duncan Murdoch.
